# columnaut

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  pyproject.toml
.streamlit/: config.toml
src/columnaut/: __init__.py  models.py
src/columnaut/ingestion/: __init__.py  base.py  csv_adapter.py  excel_adapter.py  parquet_adapter.py  quality.py  registry.py
src/columnaut/profiling/: __init__.py  advanced.py  basic.py
tests/: test_advanced_profiling.py  test_csv_adapter.py  test_excel_adapter.py  test_parquet_adapter.py  test_profiling.py  test_registry.py
