[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "columnaut"
version = "0.1.0"
description = "An interactive first-look report for tabular data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1,<4",
    "pandas>=2.2,<4",
    "pyarrow>=17,<24",
    "streamlit>=1.40,<2",
    "xlrd>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
